--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,14 @@
     <string name="rules">The basic aim of Nine Mens Morris is to make mills - vertical or horizontal lines of three in a row. \n\n
         Every time this is achieved, an opponents piece is removed, the overall objective being to reduce the number of opponents pieces to less than three or to render the opponent unable to play. \n\n
         To begin with the board is empty.</string>
+    <string name="title_activity_change_pieces">ChangePieces</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 
 </resources>
